[package]
name = "albw-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
randomizer = { git = "https://github.com/vimaster/z17-randomizer", branch = "master" }
albw = { git = "https://github.com/vimaster/z17-randomizer", branch = "master" }
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8.3", features = ["std_rng"] }
wasm-bindgen = "0.2"
js-sys = "0.3.60"
serde = "1.0.152"
serde-wasm-bindgen = "0.4.5"
console_error_panic_hook = "0.1.7"
lazy_static = "1.4.0"
